<resources>
    <string name="app_name">Stockpile</string>

    <!-- Activity and Fragment Titles -->
    <string name="title_activity_main">Stockpile</string>
    <string name="title_activity_stockpile">@string/title_activity_main</string>
    <string name="label_register_fragment">Register</string>

    <!-- Category Titles -->
    <string name="category_main_meals">Main Meals</string>
    <string name="category_staples">Staples</string>
    <string name="category_tins">Tins</string>
    <string name="category_cereals">Water</string>

    <!-- Menu Text -->
    <string name="menu_home">Home</string>
    <string name="menu_stockpile">Stockpile</string>
    <string name="menu_lists">Lists</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_pile">Item Pile</string>
    <string name="title_categories">Categories</string>
    <string name="unknown_expiry">Unknown Expiry</string>

    <!-- Auth Fragment Strings -->
    <string name="skip_sign_up">SKIP SIGN-UP</string>
    <string name="sign_in_with_google">Sign-in With Google</string>

    <!-- Home Fragment Strings -->
    <string name="home_welcome_anon">Welcome to your stockpile.</string>
    <string name="home_welcome_user">Welcome to your stockpile %s.</string>

    <!-- Item List Fragment Strings -->
    <string name="item_list_fragment_empty_text">Click the add button to add items to this category.</string>
    <string name="item_list_expiring_label">Expires: %s</string>

    <!-- Expiring Items Fragment Strings -->
    <string name="expiring_items_refresh_toast">To refresh expiring items, drag down.</string>

    <!-- Target Fragment Strings -->
    <string name="fragment_targets_empty_text">You have no targets yet. Click Add Target below to add a new target.</string>

    <!-- Image content description helpers -->
    <string name="image_of">Image of %s</string>

    <!-- General items text -->
    <string name="current_quantity">Current Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="items">Items</string>
    <string name="item_name">Item Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry">Expiry</string>
    <string name="calories">Calories</string>
    <string name="target">Target</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="total_calories">Total Calories</string>
    <string name="calories_per_item">Calories Per Item</string>
    <string name="add_to_stockpile">Add Items to this Stock Pile</string>
    <string name="pile_items">Items in this pile:</string>
    <string name="anonymous_sign_in_register_info">You are using an anonymous account. Register to keep your data safe and access your data across multiple devices.!</string>
    <string name="fragment_expiring_empty_text">You have no items expiring.</string>
    <string name="days_remaining">Days Remaining</string>
    <string name="form_error_invalid_chars_number_only">Numbers only.</string>
    <string name="form_error_empty_field">Must not be blank.</string>
    <string name="form_error_invalid_chars_no_special">No special characters.</string>
    <string name="form_error_min_not_reached">Entry to short.</string>
    <string name="edit_text_required">Required</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="check_connection">Please make sure you have an active internet connection.</string>

    <!-- General Actions Text -->
    <string name="action_yes">YES</string>
    <string name="action_no">NO</string>

    <!-- Manage Item form text -->
    <string name="manage_item_form_error_no_expiry">Error: You must add at least one expiry date.</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="im_event_success">Stockpile successfully updated.</string>
    <string name="im_event_failed">Sorry, something went wrong.</string>
    <string name="im_event_no_image">Stockpile updated! You can add or change images later.</string>
    <string name="im_event_image_failed">The item was added but we could not add your image. Please try again later.</string>
    <string name="im_event_image_time_out">Uploading your image is taking to long. Try again, or continue without an image? (You can upload one later.)</string>
    <string name="dialog_label_delete_item">Are you sure you wish to delete this item?</string>
    <string name="dialog_title_failed_image">Error uploading image.</string>
    <string name="dialog_label_failed_image">We have saved your item, without an image. Maybe you are offline? Try again, or click continue. (You can upload an image later.)</string>
    <string name="action_continue">Continue</string>
    <string name="action_try_again">Try Again</string>
    <string name="im_event_added_new">New item added!</string>

    <!-- -> Manage Target Form -->
    <string name="edit_target">Edit Target</string>
    <string name="add_target">Add Target</string>
    <string name="target_quantity">Target Quantity</string>
    <string name="label_add_targets_target_name">Target Name</string>
    <string name="label_add_targets_choose_type">Choose a target type.</string>
    <string name="label_add_targets_monthly_weekly">Weekly or monthly targets?</string>
    <string name="label_add_targets_choose_cat">Which categories do you want to track.</string>
    <string name="title_manage_target_frag_add">Add Target</string>
    <string name="title_manage_target_frag_edit">Edit Target</string>
    <string name="event_error_add_targets_same_name">Name must be unique.</string>
    <string name="event_msg_target_deleted">Target successfully deleted.</string>
    <string name="event_msg_target_added">Target successfully added.</string>
    <string name="event_msg_item_deleted">Item successfully deleted.</string>
    <string name="action_btn_targets_edit">Edit Target</string>
    <string name="dialog_title_confirm_delete">Delete Confirmation</string>
    <string name="dialog_label_delete_target">Are you sure you wish to delete this target?</string>

    <!-- Image Worker Strings and Notifications-->
    <string name="notify_title_success">Upload Successful</string>
    <string name="notify_label_success">We have successfully uploaded your image.</string>
    <string name="notify_title_fail">Upload failed</string>
    <string name="notify_label_fail">Doh! We couldn\'t upload your image. Please try again later.</string>
    <string name="channel_description">Service updates widgets on your applications home screen.</string>
    <string name="channel_id">stockpile_app_channel</string>
    <string name="notification_message">Stockpile is currently processing an update.</string>

    <!-- Widget Strings -->
    <string name="notification_title">Updating Expiring Items</string>
    <string name="widget_title">Expiring Items </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_list_empty">There are currently no items expiring.</string>
    <string name="widget_error">We were unable to load items. Please check your internet connection and try again.</string>
    <string name="widget_signed_out">You must be signed in to Stockpile to use this widget.</string>

    <!-- Dialog Sign-out -->
    <string name="sign_out">Sign Out</string>
    <string name="dialog_title_confirm_signout">Sign-out warning</string>
    <string name="dialog_label_signout_user_anon">You have an anonymous account. If you sign out, you cannot recover your data. Are you sure you want to sign out?</string>
    <string name="dialog_label_signout_work_progress">Images are still being uploaded. Signing out will prevent uploads from completing. Are you sure you want to sign out?</string>

    <!-- System Strings. DO NOT TRANSLATE -->
    <string name="font_family_light" translatable="false">sans-serif-light</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_family_black" translatable="false">sans-serif-black</string>
    <string name="font_family_thin" translatable="false">sans-serif-thin</string>
    <string name="manage_item_event_successful">Item Added Successfully</string>
</resources>