<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.authentication.AuthRegisterFragment">
    <data>
        <variable
            name="viewmodel"
            type="io.lundie.stockpile.features.authentication.AuthViewModel"/>
        <variable
            name="handler"
            type="io.lundie.stockpile.features.authentication.AuthRegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/auth_layout_root"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/logo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/material_text_display3"
            app:layout_constraintBottom_toTopOf="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            app:visibility="@{viewmodel.isLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_2"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/color_on_primary"
            android:onClick="@{() -> handler.onSignInWithGoogleClicked()}"
            app:icon="@drawable/ic_google"
            app:iconSize="22dp"
            app:visibility="@{!viewmodel.isLoading}"
            app:layout_constraintBottom_toTopOf="@+id/materialButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> handler.onSkipSignUpClicked()}"
            app:visibility="@{!viewmodel.isLoading}"
            android:text="@string/skip_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>