<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.stocklist.manageitem.ManageItemFragment">

    <data>

        <variable
            name="viewmodel"
            type="io.lundie.stockpile.features.stocklist.manageitem.ManageItemViewModel" />

        <variable
            name="handler"
            type="io.lundie.stockpile.features.stocklist.manageitem.ManageItemFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Two image views are used for switching between picasso loaded images
                    (via firebase storage, and images loaded from phone data -->
                <ImageView
                    android:id="@+id/current_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@{@string/image_of(viewmodel.itemName)}"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewmodel.currentImageUri}"
                    app:visibility="@{viewmodel.isUsingCurrentImage}" />

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@{@string/image_of(viewmodel.itemName)}"
                    android:scaleType="centerCrop"
                    android:src="@{viewmodel.itemImageUri, default=@drawable/no_drawable}"
                    app:visibility="@{!viewmodel.isUsingCurrentImage}" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_camera_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="200dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:onClick="@{() -> handler.onAddImageClicked()}"
                    android:src="@drawable/ic_add_a_photo_white_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="260dp"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/form_entry_top"
                        style="@style/MaterialMobileCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/item_name_input_layout"
                                style="@style/InputLayoutStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/default_margin"
                                android:hint="@string/item_name"
                                app:errorText="@{viewmodel.itemNameErrorText ?? null}"
                                app:helperText="@string/edit_text_required">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@={viewmodel.itemName}" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <RelativeLayout
                                android:id="@+id/category_name_spinner_container"
                                style="@style/MaterialSpinnerLayout"
                                android:layout_width="match_parent"
                                android:layout_height="62dp"
                                android:background="@drawable/material_spinner_bg"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/MaterialInputCaption"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:text="@string/category" />

                                <androidx.appcompat.widget.AppCompatSpinner
                                    android:id="@+id/category_name_spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:layout_alignParentBottom="true"
                                    android:entries="@{viewmodel.categoryNameList}"
                                    android:selectedValue="@={viewmodel.categoryName}"
                                    android:spinnerMode="dialog" />
                            </RelativeLayout>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/MaterialMobileCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorPrimary">

                        <TextView
                            style="@style/MaterialFormCardViewLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_to_stockpile" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/form_entry_date"
                        style="@style/MaterialMobileCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/expiry_date_display_layout"
                                    style="@style/InputLayoutStyle"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1.1"
                                    android:hint="@string/expiry_date"
                                    app:errorText="@{viewmodel.itemExpiryErrorText ?? null}"
                                    app:helperText="@string/edit_text_required">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/expiry_date_edit_text"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:clickable="true"
                                        android:focusable="false"
                                        android:inputType="none"
                                        android:longClickable="false"
                                        android:text="@={viewmodel.newPileExpiryDate}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/quantity_edit_layout"
                                    style="@style/InputLayoutStyle"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.9"
                                    android:hint="@string/quantity"
                                    app:errorText="@{viewmodel.newPileQuantityErrorText ?? null}"
                                    app:helperText="@string/edit_text_required">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/quantity_edit_text"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:inputType="number"
                                        android:maxLength="2"
                                        android:text="@={viewmodel.newPileQuantity}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.floatingactionbutton.FloatingActionButton
                                    android:id="@+id/add_pile_item_fab"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/keyline_4"
                                    android:layout_marginEnd="@dimen/default_margin"
                                    android:layout_marginBottom="@dimen/default_margin"
                                    android:onClick="@{() -> viewmodel.onAddExpiryPileClicked()}"
                                    android:src="@drawable/ic_add_white_24dp"
                                    app:fabSize="mini" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/default_margin"
                                android:layout_marginTop="@dimen/keyline_2"
                                android:background="@drawable/error_bubble"
                                android:paddingStart="@dimen/default_margin"
                                android:paddingTop="24dp"
                                android:paddingEnd="@dimen/default_margin"
                                android:paddingBottom="@dimen/keyline_2"
                                android:text="@string/manage_item_form_error_no_expiry"
                                app:visibility="@{viewmodel.isExpiryEntryError}" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/expiry_item_piles_rv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:listitem="@layout/fragment_manage_item_date_list_item" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/MaterialMobileCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/calories_display_layout"
                                style="@style/InputLayoutStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.1"
                                android:hint="@string/calories_per_item"
                                app:errorText="@{viewmodel.itemCaloriesErrorText ?? null}"
                                app:helperText="@string/edit_text_required">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/calories_edit_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:maxLength="4"
                                    android:text="@={viewmodel.itemCalories}" />
                            </com.google.android.material.textfield.TextInputLayout>


                            <RelativeLayout
                                android:id="@+id/total_calories_edit_layout"
                                style="@style/MaterialSpinnerLayout"
                                android:layout_width="0dp"
                                android:layout_height="62dp"
                                android:layout_weight="0.9"
                                android:background="@drawable/material_total_bg"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/total_calories_label"
                                    style="@style/MaterialInputCaption"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:text="@string/total_calories"
                                    android:textColor="@color/color_on_primary" />

                                <TextView
                                    style="@style/MaterialCustomInput"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/total_calories_label"
                                    android:background="@null"
                                    android:text='@{viewmodel.totalCaloriesLiveData ?? "0"}'
                                    android:textColor="@color/color_on_primary" />

                            </RelativeLayout>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/keyline_2"
                        android:onClick="@{() -> handler.onAddItemClicked()}"
                        android:text="@{viewmodel.addEditIconButtonText ?? @string/add_item}" />
                </LinearLayout>
            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:visibility="@{viewmodel.isAttemptingUpload}" />
    </RelativeLayout>
</layout>